--- a/index.html
+++ b/index.html
@@ -1,16 +1,15 @@
 ---
-title: Alpha2
+title: PIEA
 layout: default
 ---
 <section class="box special">
 	<header class="major">
-		<h2>Introducing the ultimate mobile app10
+		<h2>이거 수정할거에요
 		<br />
 		for doing stuff with your phone</h2>
 		<p>Blandit varius ut praesent nascetur eu penatibus nisi risus faucibus nunc ornare<br />
 		adipiscing nunc adipiscing. Condimentum turpis massa.</p>
 	</header>
-	<span class="image featured"><img src="{{ site.baseurl }}/assets/images/pic01.jpg" alt="" /></span>
 </section>
 
 <section class="box special features">
@@ -44,7 +43,6 @@ layout: default
 	<div class="6u">
 
 		<section class="box special">
-			<span class="image featured"><img src="{{ site.baseurl }}/assets/images/pic02.jpg" alt="" /></span>
 			<h3>Sed lorem adipiscing</h3>
 			<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
 			<ul class="actions">
@@ -56,7 +54,6 @@ layout: default
 	<div class="6u">
 
 		<section class="box special">
-			<span class="image featured"><img src="{{ site.baseurl }}/assets/images/pic03.jpg" alt="" /></span>
 			<h3>Accumsan integer</h3>
 			<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
 			<ul class="actions">
