--- a/404.html
+++ b/404.html
@@ -2,6 +2,7 @@
 layout: default
 ---
 
-<div class="main-image">
-    <img src="{{ site.baseurl }}/assets/images/404.png">
+<div class="center-content">
+    <img src="{{ site.baseurl }}/assets/images/404.gif">
 </div>
+<h1>페이지가 존재하지 않아요 :(</h1>
