페이지 헤더 배경 색상 변경

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@ title: {{ site.name }}
 
 <hr>
 <div id="home">
+  <img class="center-content" src="assets/images/piea-banner.jpg">
+  <hr>
   <h2>글 목록</h2>
   <ul class="posts">
     {% for post in site.posts %}
