--- a/404.html
+++ b/404.html
@@ -2,6 +2,6 @@
 layout: default 
 ---
 
-<img class="center-content" src="assets/images/404.gif">
+<img class="center-content" src="../../../assets/images/404.gif">
 <p class="pnf-text">이런!</p>
 <p class="pnf-text">페이지가 존재하지 않아요 :(</p>
